# KGWASMatrix

./: .gitignore  README.md  accessions.txt  install.sh
init/: Dockerfile
scripts/: build_binaries.sh  build_img.sh  start_cont.sh
src/: CMakeLists.txt  compile.sh  kmer_count.cpp  matrix_merge.cpp  mmap_io.cpp  mmap_io.hpp
